# hadith-finder

./: pyproject.toml
src/hadith/: __init__.py
