[project]
name = "hadith"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ZOHAIB7689", email = "bzohaib754@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "crewai>=0.102.0",
    "litellm>=1.60.2",
    "streamlit>=1.42.2",
]

[project.scripts]
hadith = "hadith:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
