[project]
name = "hadith"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ZOHAIB7689", email = "bzohaib754@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "crewai==0.0.26",
    "litellm>=1.60.2",
    "streamlit>=1.42.2",
    "chromadb==0.4.0",
    "chroma-hnswlib==0.7.3"
]

[project.scripts]
hadith = "hadith:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
